syntax = "proto3";

package api;

service KobeApi {
  rpc CreateProject(CreateProjectRequest) returns (CreateProjectResponse){}
  rpc ListProject(ListProjectRequest) returns(ListProjectResponse){}
  rpc GetInventory(GetInventoryRequest) returns(GetInventoryResponse){}
  rpc RunPlaybook(RunPlaybookRequest) returns(stream WatchStream){}
  rpc SaveResult(SaveResultRequest) returns(SaveResultResponse){}
  rpc GetResult(GetResultRequest) returns(GetResultResponse){}
}

message Project{
  string name = 1 ;
  repeated string playbooks = 2;
}

message Host {
  string ip = 1;
  string name = 2;
  int32 port = 3;
  string user = 4;
  string password = 5;
  map<string, string> vars = 6;
}

message Group {
  string name = 1;
  repeated string hosts = 2;
  repeated string children = 3;
  map<string, string>vars = 4;
}

message Inventory{
  repeated Host hosts = 1;
  repeated Group groups = 2;
}

message CreateProjectRequest {
  string name = 1;
  string source = 2;
}

message CreateProjectResponse {
  Project item = 1;
}

message ListProjectRequest {}

message ListProjectResponse {
  repeated Project items = 1;
}

message RunPlaybookRequest {
  string project = 1;
  string playbook = 2;
  Inventory inventory = 3;
}

message Result {
  string id = 1;
  string startTime = 2;
  string endTime = 3;
  string message = 4;
  bool success = 5;
  bool finished = 6;
  string content = 7;
}

message WatchStream {
  bytes stream = 1;
  Result result = 2;
}

message GetInventoryRequest {
  string id = 1;
}

message GetInventoryResponse {
  Inventory item = 1;
}

message SaveResultRequest{
  Result item = 1;
}

message SaveResultResponse{
  Result item = 1;
}

message GetResultRequest{
  string taskId = 1;
}

message GetResultResponse{
  Result item = 1;
}

